# handler/androids.go
@@ -11,7 +11,7 @@ import (
 // CreateAndroid ... Create Android
 // @Summary  Create a new android in the specified android group
 // @Tags     androids
-// @Param    id       path      string  true  "Android Group ID"
+// @Param    id       path      string                     true   "Android Group ID"
 // @Success  200      {object}  model.Android
 // @Failure  404,500  {object}  model.ErrorResponse
 // @Router   /android_groups/{id}/androids [post]
@@ -34,6 +34,14 @@ func CreateAndroid(c *gin.Context) {
 	}
 }
 
+// GetAndroids ... Get Androids By Android Group ID
+// @Summary  Returns a paginated list of androids in the specified android group
+// @Tags     androids
+// @Param    id       path      string  true  "Android Group ID"
+// @param    params   query     util.OffsetPaginationArgs  false  "Pagination parameters"
+// @Success  200      {object}  []model.Android
+// @Failure  404,500  {object}  model.ErrorResponse
+// @Router   /android_groups/{id}/androids [get]
 func GetPaginatedAndroidsByGroup(c *gin.Context) {
 	type Uri struct {
 		ID string `uri:"id" binding:"required,uuid"`
